manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: alps
spec:
  replicas: 2
  selector:
    matchLabels:
      app: alps
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app: alps
    spec:
      serviceAccountName: alps
      terminationGracePeriodSeconds: 60
      containers:
      - name: alps
        image: smoretto/alps:latest
        imagePullPolicy: IfNotPresent        
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
          limits:
            cpu: 200m
            memory: 200Mi
        # readinessProbe:
        #   httpGet:
        #     path: /ping
        #     port: 9000
        #   failureThreshold: 1
        #   initialDelaySeconds: 10
        #   periodSeconds: 10
        #   successThreshold: 1
        #   timeoutSeconds: 2
        # livenessProbe:
        #   httpGet:
        #     path: /ping
        #     port: 9000
        #   failureThreshold: 3
        #   initialDelaySeconds: 10
        #   periodSeconds: 10
        #   successThreshold: 1
        #   timeoutSeconds: 2
        ports:
        - name: web
          containerPort: 8080
          protocol: TCP
